PortalPackage/ Enrollment Rx Core/objects/Advisor_Goal__c.object
<CustomObject>
    <description>ERx Custom Object</description>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ERx Custom Field</description>
        <label>Advisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N80000002kRlNEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Goal_10__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The 10th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 10 Status&quot; to match the status you wish to track for this goal.</description>
        <inlineHelpText>The 10th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 10 Status&quot; to match the status you wish to track for this goal.</inlineHelpText>
        <label>Enrollment Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_11__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The 11th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 11 Status&quot; to match the status you wish to track for this goal.</description>
        <inlineHelpText>The 11th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 11 Status&quot; to match the status you wish to track for this goal.</inlineHelpText>
        <label>Goal 11</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Goal_12__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The 12th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 12 Status&quot; to match the status you wish to track for this goal.</description>
        <inlineHelpText>The 12th of 13 possible goals that can be tracked in Advisor Goals. To track a new goal, change the label of this field and change the Configuration &quot;Advisor Goal 12 Status&quot; to match the status you wish to track for this goal.</inlineHelpText>
        <label>Starts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Advisor Goals for this Term</relationshipLabel>
        <relationshipName>Advisor_Goals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Goal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Actual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Updated__c</fullName>
        <description>ERx - Target field for Status Tracking Analytic Snapshot.</description>
        <label>Updated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Advisor Goal</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>Term__c</columns>
        <columns>Advisor__c</columns>
        <columns>Goal_2__c</columns>
        <columns>Goal_4__c</columns>
        <columns>Goal_6__c</columns>
        <columns>Goal_8__c</columns>
        <columns>Goal_10__c</columns>
        <columns>Goal_12__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Spring_2009</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Advisor__c</columns>
        <columns>Term__c</columns>
        <columns>Goal_1__c</columns>
        <columns>Goal_2__c</columns>
        <columns>Goal_4__c</columns>
        <columns>Goal_6__c</columns>
        <columns>Goal_8__c</columns>
        <columns>Goal_10__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Term__c</field>
            <operation>contains</operation>
            <value>Spring 2009</value>
        </filters>
        <label>Spring 2009</label>
    </listViews>
    <nameField>
        <displayFormat>AG - {YYYY}-{MM}-{000}</displayFormat>
        <label>Advisor Goals Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advisor Goals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>